# ball-gfx-hal

./: .gitignore  Cargo.toml  build.rs  dist.sh  lots_of_clients.sh  rustfmt.toml
shaders/: circle.frag  circle.vert
src/: debug.rs  double_buffer.rs  game.rs  graphics.rs  logger.rs  main.rs  state.rs  ui.rs
src/game/: client.rs  input.rs  mod.rs  physics.rs  server.rs  snapshot.rs
src/graphics/: circles.rs  mod.rs
src/networking/: client.rs  client_tokio.rs  connection.rs  event_loop.rs  mod.rs  server.rs  server_tokio.rs  tick.rs
