[package]
name = "ball-gfx-hal"
version = "0.1.0"
authors = ["Benjamin <benjamin@chronicembetterment.org>"]
edition = "2018"

[dependencies]
gfx-hal = "0.1.0"
gfx-backend-vulkan = "0.1.0"
imgui-gfx-hal = "0.1.2"
imgui = "0.0.23"
winit = "0.18.1"
imgui-winit = "0.1.2"
log = { version = "0.4.6", features = ["max_level_trace", "release_max_level_info"] }
renderdoc = { version = "0.4.0", optional = true }
palette = { version = "0.4.1", features = ["serde"] }
arrayvec = { version = "0.4.10", features = ["use_union"] }
parking_lot = "0.7.1"
bincode = "1.1.3"
serde = "1.0.90"
serde_derive = "1.0.90"
rand = "0.6.5"
failure = "0.1.5"
mio = "0.6.16"
mio-extras = "2.0.5"
byteorder = "1.3.1"
structopt = "0.2.15"
ctrlc = "3.1.2"
lazy_static = "1.3.0"
colored = "1.8.0"
smallvec = { version = "0.6.9", features = ["union"] }
ord_subset = "3.1.1"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
either = "1.5.2"
crossbeam = "0.7.1"
take_mut = "0.2.2"
itertools = "0.8.0"
easer = "0.2.1"
igd = "0.8.2"

[build-dependencies]
# 0.5.0 broke stuff
shaderc = "0.3.16"
walkdir = "2.2.7"
